--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,8 +17,7 @@ body {
   /* position: absolute; */
   display: grid;
   /* width: 1500px; */
-  grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
+  grid-template-columns: repeat(4);
   /* left: 50%;
   top: 50%;
   transform: translateY(-50%);
@@ -43,9 +42,12 @@ body {
   grid-column: 4;
   grid-row: 1;
   width: 25rem;
-  background-color: rgb(229, 255, 0);
+  background: rgb(34,193,195);
+  background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
   display: flex;
-  /* flex-flow: column; */
+  flex-flow: column;
+  width: 100%;
+  height: 100%;
 }
 
 #nav, #story {
