--- a/src/css/output.css
+++ b/src/css/output.css
@@ -5,25 +5,56 @@ body {
 }
 
 #char {
-  position: absolute;
-  left: 10%;
-  top: 10%;
-  transform: translateY(10%);
+  position: relative;
+  width: 67px;
+  height: 80px;
+  left: 220px;
+  top: 100px;
+  transform: translateY(-10%);
 }
 
-map {
+.container {
   /* position: absolute; */
-  left: 50%;
+  display: grid;
+  /* width: 1500px; */
+  grid-template-columns: repeat(4);
+  /* left: 50%;
   top: 50%;
-  /* transform: translateY(-50%); */
-  transform: translateX(-50%);
+  transform: translateY(-50%);
+  transform: translateX(-50%); */
+  place-items: center;
+  /* background-color: aliceblue; */
+  max-width: 80%;
+  margin: auto;
+}
+
+.maps {
+  grid-column: 1 / 3;
+  grid-row: 1;
+}
+
+/* 
+#nav {
+  grid-column: 4;
+  grid-row: 1;
+  background-color: blue;
+} */
+
+#text {
+  grid-column: 4;
+  grid-row: 1;
+  background: rgb(34,193,195);
+  background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253, 187, 45, 0.585) 100%);
+  display: flex;
+  flex-flow: column;
+  min-width: 300px;
+  height: 100%;
 }
 
 #nav, #story {
   display: block;
   margin: auto;
   padding: 1rem;
-  width: 775px;
 }
 
 /* #top-left {
@@ -32,10 +63,10 @@ map {
   z-index: 2;
 } */
 
-area {
+/* area {
   border: 5px solid rgb(255, 255, 255);
   z-index: 2;
-}
+} */
 
 .hidden {
   display: none;
@@ -44,4 +75,15 @@ area {
 div {
   display: flex;
   justify-content: center;
+}
+
+@font-face {
+  font-family: Ancient;
+
+  src: url(./../../assets/fonts/AncientModernTales-a7Po.ttf);
+}
+
+h1 {
+  font-family: Ancient;
+  font-size:100px;
 }
