--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,7 +16,7 @@ body {
   /* position: absolute; */
   display: grid;
   /* width: 1500px; */
-  grid-template-columns: repeat(4);
+  grid-template-columns: repeat(3);
   /* left: 50%;
   top: 50%;
   transform: translateY(-50%);
@@ -27,7 +27,7 @@ body {
   margin: auto;
 }
 .maps {
-  grid-column: 1 / 3;
+  grid-column: 2 / 3;
   grid-row: 1;
   /* width: 640px;
   height: 640px; */
@@ -40,7 +40,7 @@ body {
 } */
 
 #text {
-  grid-column: 4;
+  grid-column: 3;
   grid-row: 1;
   background: rgb(34,193,195);
   background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253, 187, 45, 0.585) 100%);
@@ -92,9 +92,15 @@ div {
   animation-name: move;
   animation-duration: 4s;
   animation-fill-mode: forwards;
-  /* animation: move 10s steps(10) infinite alternate; */
 
 }
+
+/* .move-back {
+  position: relative;
+  animation-duration: 4s;
+  animation-fill-mode: backwards;
+  animation: move 10s steps(10) infinite alternate; 
+} */
 
 @keyframes move {
 
@@ -103,9 +109,9 @@ div {
 }
 
 /* @keyframes char {  */
-  /* 0%   {background: red; left: 0px; top: 0px;} */
-  /* 25%  {background: yellow; left: 200px; top: 0px;} // frame2 */
-  /* 50%  {background: blue; left: 200px; top: 200px;}*/
-  /* 75%  {background: green; left: 0px; top: 200px;} */
-  /* 100% {background: red; left: 0px; top: 0px;}  */
+  /* 0%   {left: 0px; top: 0px;} */
+  /* 25%  {left: 200px; top: 0px;} // frame2 */
+  /* 50%  {left: 200px; top: 200px;}*/
+  /* 75%  {left: 0px; top: 200px;} */
+  /* 100% {left: 0px; top: 0px;}  */
 /* } */
