--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,7 +10,7 @@ body {
   position: relative;
   width: 67px;
   height: 80px;
-  left: 470px;
+  left: 540px;
   top: 270px;
 }
 
@@ -20,6 +20,17 @@ body {
   top: 400px;
   width: 76px;
   height: 120px;
+}
+
+#bottom {
+  position: relative;
+  left: 475px;
+  top: 570px;
+  width: 56px;
+  height: 60px;
+  animation: point 3s ease-in-out infinite;
+  cursor: pointer;
+  opacity: 0.5;
 }
 
 .container {
@@ -61,6 +72,23 @@ body {
   height: 100%; 
 }
 
+#controls {
+  position: absolute;
+  top: 650px;
+  left: 40%;
+  margin: auto;
+  transform: translateX(-40%);
+}
+
+#stats {
+  position: absolute;
+  top: 150px;
+  left: 40%;
+  transform: translateX(-20%);
+  font-family: 'VT323', monospace;
+  font-size: 20px;
+}
+
 /* #island {
   box-sizing: border-box;
 } */
@@ -89,7 +117,7 @@ body {
 
 div {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 @font-face {
@@ -126,6 +154,10 @@ div {
 
 }
 
+.shake {
+  animation: shake 1s ease-in-out 3;
+}
+
 /* .move-back {
   position: relative;
   animation-duration: 4s;
@@ -134,7 +166,7 @@ div {
 } */
 
 @keyframes move {
-
+  50%   { transform: translate(-20px,150px); }   
   100%   { transform: translateY(300px); }   
   
 }
@@ -142,8 +174,23 @@ div {
 @keyframes secondMove {
   0% { top: 50px;
     left: 550px; }
-  100%   { transform: translateY(350px); }   
+  100%   { transform: translate(-50px, 350px); }   
   
+}
+
+@keyframes point {
+	0% {
+
+		transform: translatey(0px);
+	}
+	50% {
+
+		transform: translatey(-20px);
+	}
+	100% {
+
+		transform: translatey(0px);
+	}
 }
 
 /* @keyframes char {  */
@@ -162,4 +209,77 @@ div {
   background: linear-gradient(0deg, rgba(187,150,60,1) 0%, rgba(129,225,226,1) 100%);
   padding: 5px;
   border: 2px solid rgb(156, 112, 52);
+}
+
+
+/* CSS */
+.button-75 {
+  align-items: center;
+  background-image: linear-gradient(135deg, #f34079 40%, #fc894d);
+  border: 0;
+  margin: 10px;
+  width: 150px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  font-family: 'VT323', monospace;
+  font-size: 24px;
+  font-weight: 700;
+  height: 54px;
+  justify-content: center;
+  letter-spacing: .4px;
+  line-height: 1;
+  max-width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 3px;
+  text-decoration: none;
+  text-transform: uppercase;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-75:active {
+  outline: 0;
+}
+
+.button-75:hover {
+  outline: 0;
+}
+
+.button-75 span {
+  transition: all 200ms;
+}
+
+.button-75:hover span {
+  transform: scale(.9);
+  opacity: .75;
+}
+
+@media screen and (max-width: 991px) {
+  .button-75 {
+    font-size: 15px;
+    height: 50px;
+  }
+
+  .button-75 span {
+    line-height: 50px;
+  }
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
