--- a/src/css/output.css
+++ b/src/css/output.css
@@ -71,6 +71,23 @@ body {
   height: 100%;
 }
 
+#controls {
+  position: absolute;
+  top: 650px;
+  left: 40%;
+  margin: auto;
+  transform: translateX(-40%);
+}
+
+#stats {
+  position: absolute;
+  top: 150px;
+  left: 40%;
+  transform: translateX(-20%);
+  font-family: 'VT323', monospace;
+  font-size: 20px;
+}
+
 /* #island {
   box-sizing: border-box;
 } */
@@ -135,6 +152,10 @@ div {
   animation-fill-mode: forwards;
 }
 
+.shake {
+  animation: shake 1s ease-in-out 3;
+}
+
 /* .move-back {
   position: relative;
   animation-duration: 4s;
@@ -143,6 +164,10 @@ div {
 } */
 
 @keyframes move {
+  50%   {
+    transform: translate(-20px,150px);
+  }
+
   100%   {
     transform: translateY(300px);
   }
@@ -155,7 +180,7 @@ div {
   }
 
   100%   {
-    transform: translateY(350px);
+    transform: translate(-50px, 350px);
   }
 }
 
@@ -195,6 +220,66 @@ div {
   background: linear-gradient(0deg, rgba(187,150,60,1) 0%, rgba(129,225,226,1) 100%);
   padding: 5px;
   border: 2px solid rgb(156, 112, 52);
+}
+
+/* CSS */
+
+.button-75 {
+  align-items: center;
+  background-image: linear-gradient(135deg, #f34079 40%, #fc894d);
+  border: 0;
+  margin: 10px;
+  width: 150px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  font-family: 'VT323', monospace;
+  font-size: 24px;
+  font-weight: 700;
+  height: 54px;
+  justify-content: center;
+  letter-spacing: .4px;
+  line-height: 1;
+  max-width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 3px;
+  text-decoration: none;
+  text-transform: uppercase;
+  -moz-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-75:active {
+  outline: 0;
+}
+
+.button-75:hover {
+  outline: 0;
+}
+
+.button-75 span {
+  transition: all 200ms;
+}
+
+.button-75:hover span {
+  transform: scale(.9);
+  opacity: .75;
+}
+
+@media screen and (max-width: 991px) {
+  .button-75 {
+    font-size: 15px;
+    height: 50px;
+  }
+
+  .button-75 span {
+    line-height: 50px;
+  }
 }
 
 @keyframes shake {
