--- a/src/css/output.css
+++ b/src/css/output.css
@@ -22,7 +22,7 @@ body {
   height: 120px;
 }
 
-#bottom {
+#bottom-arrow {
   position: relative;
   left: 475px;
   top: 570px;
@@ -30,7 +30,7 @@ body {
   height: 60px;
   animation: point 3s ease-in-out infinite;
   cursor: pointer;
-  opacity: 0.5;
+  opacity: 0.7;
 }
 
 .container {
