--- a/src/css/output.css
+++ b/src/css/output.css
@@ -12,6 +12,7 @@ body {
   height: 80px;
   left: 540px;
   top: 270px;
+  z-index: 2;
 }
 
 #enemy {
@@ -20,6 +21,7 @@ body {
   top: 400px;
   width: 76px;
   height: 120px;
+  z-index: 2;
 }
 
 #bottom-arrow {
@@ -30,7 +32,8 @@ body {
   height: 60px;
   animation: point 3s ease-in-out infinite;
   cursor: pointer;
-  opacity: 0.7;
+  opacity: 0;
+  z-index: 1;
 }
 
 .container {
@@ -69,6 +72,16 @@ body {
   flex-flow: column;
   width: 350px;
   height: 100%;
+}
+
+#sidebar-heading {
+  display: flex;
+  flex-flow: column;
+}
+
+#battleStats {
+  justify-content: center;
+  padding: 25px;
 }
 
 #controls {
@@ -117,6 +130,10 @@ body {
 div {
   display: flex;
   justify-content: flex-end;
+}
+
+#text {
+  justify-content: flex-start;
 }
 
 @font-face {
